--- a/RHI/Vulkan/CMakeLists.txt
+++ b/RHI/Vulkan/CMakeLists.txt
@@ -22,7 +22,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/s
 target_compile_definitions(${PROJECT_NAME} PRIVATE VULKAN_RHI_EXPORTS)
 target_link_libraries(
     ${PROJECT_NAME}
-    PRIVATE imgui
+    PRIVATE imgui_header
             spirv-cross-core
             shaderc
             VulkanMemoryAllocator
