--- a/External/CMakeLists.txt
+++ b/External/CMakeLists.txt
@@ -10,7 +10,7 @@ set(TRACY_ON_DEMAND
     CACHE BOOL ""
 )
 set(TRACY_STATIC
-    OFF
+    ${VIT_COMPILE_MONOLITHIC}
     CACHE BOOL ""
 )
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tracy EXCLUDE_FROM_ALL)
@@ -18,7 +18,9 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tracy EXCLUDE_FROM_ALL)
 # add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tracy/profiler EXCLUDE_FROM_ALL)
 
 add_library(imgui_header INTERFACE)
-target_include_directories(imgui_header INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/imgui ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends)
+target_include_directories(
+    imgui_header INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/imgui ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends
+)
 add_library(
     imgui STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp
