fix(ModuleManager): fixed monolithic build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,16 +33,9 @@ endif()
 
 option(VIT_ENABLE_ASAN "Enable AddressSanitizer" OFF)
 if(VIT_ENABLE_ASAN)
-    if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-        set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT
-            "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>"
-        )
-        add_compile_options(/fsanitize=address)
-        add_link_options(/fsanitize=address)
-    else()
-        add_compile_options(-fsanitize=address)
-        add_link_options(-fsanitize=address)
-    endif()
+    message(STATUS "VIT - Building with Address Sanitizer")
+else()
+    message(STATUS "VIT - Building without Address Sanitizer")
 endif(VIT_ENABLE_ASAN)
 
 find_linker()
@@ -63,14 +56,14 @@ endif()
 
 option(VIT_OPTIMIZE_FOR_NATIVE "Build with -march=native (AVX2 by default)" OFF)
 if(VIT_OPTIMIZE_FOR_NATIVE)
-    message(STATUS "Building with -march=native")
+    message(STATUS "VIT - Building with -march=native")
 else()
-    message(STATUS "Building without -march=native")
+    message(STATUS "VIT - Building without -march=native")
 endif()
 
 option(VIT_BUILD_DOCUMENTATION "Build the Doxygen documentation" OFF)
 if(VIT_BUILD_DOCUMENTATION)
-    message(STATUS "Documentation building using Doxygen enabled")
+    message(STATUS "VIT - Documentation building using Doxygen enabled")
     find_package(Doxygen)
     if(DOXYGEN_FOUND)
         set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
@@ -123,6 +116,19 @@ generate_build_config_header(
     "${CMAKE_SOURCE_DIR}/cmake/BuildConfig.h.in"
 )
 
+function(vit_link_to_module target module moduleName)
+    if(VIT_COMPILE_MONOLITHIC)
+        if(MSVC)
+            target_link_options(${target} PRIVATE "/INCLUDE:IMPLEMENT_MODULE_F${moduleName}Module")
+        elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+            target_link_libraries(${target} PRIVATE "-Wl,--whole-archive" ${module} "-Wl,--no-whole-archive")
+        endif()
+    else()
+        add_dependencies(${target} ${module})
+        vit_copy_dlls_to_target_dir(${target} ${module})
+    endif()
+endfunction(vit_link_to_module)
+
 function(vit_set_standard_options target precompile_header)
     target_disable_rtti(${target})
     target_compile_features(${target} PUBLIC cxx_std_23)
@@ -170,6 +176,18 @@ function(vit_set_standard_options target precompile_header)
                 /wd4702 # unreachable code
                 /wd5030> # unknown attribute
     )
+    if(VIT_ENABLE_ASAN)
+        if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+            set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT
+                "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>"
+            )
+            target_compile_options(${target} PUBLIC /fsanitize=address)
+            target_link_options(${target} PUBLIC /fsanitize=address)
+        else()
+            target_compile_options(${target} PUBLIC -fsanitize=address)
+            target_link_options(${target} PUBLIC -fsanitize=address)
+        endif()
+    endif(VIT_ENABLE_ASAN)
     if(VIT_OPTIMIZE_FOR_NATIVE)
         if(MSVC)
             target_compile_options(${target} PUBLIC /arch:AVX2)
