fix(Windows): fixed monolith compilation for windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,7 @@ function(vit_link_to_module target module moduleName)
     if(VIT_COMPILE_MONOLITHIC)
         if(MSVC)
             target_link_options(${target} PRIVATE "/INCLUDE:IMPLEMENT_MODULE_F${moduleName}Module")
+            target_link_libraries(${target} PRIVATE ${module})
         elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
             target_link_libraries(${target} PRIVATE "-Wl,--whole-archive" ${module} "-Wl,--no-whole-archive")
         endif()
