--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,6 +228,12 @@ function(vit_copy_dlls_to_target_dir TARGET_NAME)
             COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:${TARGET_NAME}> $<TARGET_RUNTIME_DLLS:${TARGET_NAME}>
             COMMAND_EXPAND_LISTS
         )
+        add_custom_command(
+            TARGET ${TARGET_NAME}
+            POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:${TARGET_NAME}> $<TARGET_FILE:${ARGN}>
+            COMMAND_EXPAND_LISTS
+        )   
     elseif(UNIX)
         set_target_properties(${TARGET_NAME} PROPERTIES BUILD_RPATH "\$ORIGIN")
 
