--- a/Engine/External/CMakeLists.txt
+++ b/Engine/External/CMakeLists.txt
@@ -39,6 +39,10 @@ set(MI_BUILD_OBJECT
     OFF
     CACHE INTERNAL "" FORCE
 )
+set(MI_WIN_REDIRECT 
+    OFF
+    CACHE INTERNAL "" FORCE
+)
 set(MI_BUILD_SHARED
     ${VIT_LIBRARY_TYPE}
     CACHE INTERNAL "" FORCE
